# spray

./: .gitignore  LICENSE  README.md  pyproject.toml  yaml2xls.py
.github/workflows/: python-tests.yml
doc/: parameters.md
examples/: simple_table.xlsx  simple_table.yml
spray/: spray.py
test/: helper_functions.py  test_file_handling.py  test_xls_generation.py  test_yaml_generation.py
