[project]
name = "spray"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "klasch5town", email = "klasch5town@schneebrenner.de"},
]
dependencies = [
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "dep-logic==0.5.0",
    "distlib==0.3.9",
    "exceptiongroup==1.2.2",
    "filelock==3.18.0",
    "findpython==0.6.3",
    "h11==0.14.0",
    "hishel==0.1.2",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "id==1.5.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "installer==0.7.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "packaging==25.0",
    "pbs-installer==2025.4.9",
    "pdm==2.24.1",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "Pygments==2.19.1",
    "pyproject-hooks==1.2.0",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "resolvelib==1.1.0",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "truststore==0.10.1",
    "typing-extensions==4.13.2",
    "unearth==0.17.5",
    "urllib3==2.4.0",
    "virtualenv==20.30.0",
]
requires-python = ">=3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
